<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_FlowMeter" Id="{b27781df-18fb-4634-9dd8-15ad1f972821}">
    <Declaration><![CDATA[TYPE ST_FlowMeter :
STRUCT
	FlowInterlockSt : BOOL;
	TemperatureInterlockSt : BOOL;
	FlowSt : LREAL;
	TemperatureSt : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>